# aoc

./: README.md  hello.hs  hello.s  shell.nix
aoc-2021/: shell.nix
aoc-2021-day1/: main
aoc-2021-day2/: main.hs
aoc-2022/: shard.yml  shell.nix
aoc-2022-zig/: build.zig
aoc-2023-nim/: day01.nim
aoc-2023-ocaml/: aoc_2023.opam  dune-project
aoc-2023-ocaml/_build/: .db  .digest-db  log
aoc-2023-ocaml/_build/default/: aoc_2023.dune-package  aoc_2023.install
aoc-2023-ocaml/_build/default/.dune/: configurator  configurator.v2
aoc-2023-ocaml/_build/default/lib/: aoc_2023.cma  aoc_2023.cmxa  aoc_2023.cmxs  aoc_2023.ml-gen
aoc-2023-ocaml/_build/default/lib/.aoc_2023.objs/: aoc_2023__Stdin.impl.d
aoc-2023-ocaml/_build/default/lib/.aoc_2023.objs/byte/: aoc_2023.cmi  aoc_2023.cmo  aoc_2023.cmt  aoc_2023__Stdin.cmi  aoc_2023__Stdin.cmo  aoc_2023__Stdin.cmt
aoc-2023-ocaml/_build/default/lib/.aoc_2023.objs/native/: aoc_2023.cmx  aoc_2023__Stdin.cmx
aoc-2023-ocaml/_build/default/lib/.formatted/: stdin.ml
aoc-2023-ocaml/_build/default/lib/.merlin-conf/: lib-aoc_2023
aoc-2023-ocaml/_build/default/test/.formatted/: dune
aoc-2023-ocaml/_build/default/test/.merlin-conf/: exe-test_aoc_2023
aoc-2023-ocaml/_build/default/test/.test_aoc_2023.eobjs/byte/: dune__exe__Test_aoc_2023.cmi  dune__exe__Test_aoc_2023.cmti
aoc-2023-ocaml/_build/default/test/.test_aoc_2023.eobjs/native/: dune__exe__Test_aoc_2023.cmx
aoc-2023-ocaml/_build/install/default/lib/aoc_2023/: META  dune-package  opam
aoc2022-nim/: .gitignore
aoc2022-rs/: .gitignore  shell.nix
(+66 files in other folders)
