(lang dune 3.12)

(name aoc_2023)

(generate_opam_files true)

(source
 (github dingyuchen/aoc))

(authors "Ding YuChen")

(maintainers "Ding YuChen")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc_2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
